# digital-pedon

./: .gitignore  CITATION.cff  LICENSE  README.md  experiment2_solver_chain.py  experiment4_heat_flux_3d.py  pyproject.toml
.dpenv/: pyvenv.cfg
.github/workflows/: ci.yml
digital_pedon/: __init__.py  pedon_api.py
digital_pedon/llm/: __init__.py  dp_agent.py  dp_llm_context.json  dp_tools.json
digital_pedon/ontology/: __init__.py  vocab.py
digital_pedon/sensor/: __init__.py  sensor_layer.py
digital_pedon/sources/: __init__.py  soilgrids.py
examples/: 01_quick_start.py  02_soilgrids_fetch.py  03_sensor_manifest.py  04_remote_sensing.py  05_llm_agent.py  sensors_example.yaml
tests/: test_ontology.py  test_pedon_api.py  test_sensor_layer.py
