[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "digital-pedon"
version         = "2.0.0"
description     = "A digital twin framework for soil profile monitoring, physics-based inference, and global interoperability"
readme          = "README.md"
license         = {text = "CC-BY-4.0"}
requires-python = ">=3.9"
dependencies    = []   # zero runtime dependencies — pure stdlib

authors = [
  {name = "Nasem Badreldin"},
  {name = "Ali Youssef"},
]

keywords = [
  "soil science", "digital twin", "soil physics", "van genuchten",
  "soil monitoring", "GLOSIS", "soil hydrology", "remote sensing",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]        # for SensorManifest.from_yaml()
llm  = ["anthropic>=0.20"]    # for the LLM agent examples
dev  = ["pytest>=7", "pyyaml>=6.0"]

[project.urls]
Homepage      = "https://github.com/digitalpedon/framework"
Repository    = "https://github.com/digitalpedon/framework"
Documentation = "https://github.com/digitalpedon/framework/wiki"
"Bug Tracker" = "https://github.com/digitalpedon/framework/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["digital_pedon*"]

[tool.setuptools.package-data]
"digital_pedon.llm" = ["*.json"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
